🔧 Use separate Chrome profiles for parallel runs (no more conflicts!)

--- a/genuary-skills/genuary.yaml
+++ b/genuary-skills/genuary.yaml
@@ -49,6 +49,8 @@ extensions:
     args:
       - -y
       - chrome-devtools-mcp@latest
+      - --userDataDir
+      - /tmp/genuary-skills-chrome-profile
     timeout: 300
 
 parameters:
