--- a/.github/workflows/post-to-bluesky.yml
+++ b/.github/workflows/post-to-bluesky.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install requests
+          pip install requests Pillow
 
       - name: Post to Bluesky
         env:
