--- a/.github/workflows/post-to-twitter.yml
+++ b/.github/workflows/post-to-twitter.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install requests Pillow
+          pip install tweepy Pillow
 
       - name: Post to Twitter
         env:
