--- a/.github/workflows/post-to-bluesky.yml
+++ b/.github/workflows/post-to-bluesky.yml
@@ -38,3 +38,13 @@ jobs:
           BLUESKY_APP_PASSWORD: ${{ secrets.BLUESKY_APP_PASSWORD }}
           MANUAL_DAY: ${{ github.event.inputs.day }}
         run: python scripts/post_to_bluesky.py
+
+      - name: Commit posted status
+        run: |
+          if [ -f .posted_days ]; then
+            git config user.name "github-actions[bot]"
+            git config user.email "github-actions[bot]@users.noreply.github.com"
+            git add .posted_days
+            git diff --staged --quiet || git commit -m "Track Bluesky post for day"
+            git push
+          fi
