--- a/.github/workflows/post-to-twitter.yml
+++ b/.github/workflows/post-to-twitter.yml
@@ -39,3 +39,13 @@ jobs:
           TWITTER_ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
           MANUAL_DAY: ${{ github.event.inputs.day }}
         run: python scripts/post_to_twitter.py
+
+      - name: Commit posted status
+        run: |
+          if [ -f .posted_days_twitter ]; then
+            git config user.name "github-actions[bot]"
+            git config user.email "github-actions[bot]@users.noreply.github.com"
+            git add .posted_days_twitter
+            git diff --staged --quiet || git commit -m "Track Twitter post for day"
+            git push
+          fi
