--- a/.github/workflows/post-to-linkedin.yml
+++ b/.github/workflows/post-to-linkedin.yml
@@ -19,6 +19,8 @@ on:
 jobs:
   post:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
