🐛 Add default value for optional day parameter

--- a/genuary/genuary.yaml
+++ b/genuary/genuary.yaml
@@ -306,6 +306,7 @@ parameters:
   - key: day
     input_type: number
     requirement: optional
+    default: ""
     description: "The day number (1-31) to work on. If not provided, will use today's date or ask."
 
 activities:
