--- a/genuary-skills/genuary.yaml
+++ b/genuary-skills/genuary.yaml
@@ -140,6 +140,7 @@ parameters:
   - key: day
     input_type: number
     requirement: optional
+    default: ""
     description: "The day number (1-31) to work on"
 
 activities:
