--- a/genuary-skills/genuary.yaml
+++ b/genuary-skills/genuary.yaml
@@ -138,7 +138,7 @@ extensions:
 
 parameters:
   - key: day
-    input_type: number
+    input_type: string
     requirement: optional
     default: ""
     description: "The day number (1-31) to work on"
