--- a/genuary/genuary.yaml
+++ b/genuary/genuary.yaml
@@ -304,7 +304,7 @@ extensions:
 
 parameters:
   - key: day
-    input_type: number
+    input_type: string
     requirement: optional
     default: ""
     description: "The day number (1-31) to work on. If not provided, will use today's date or ask."
