🔧 Switch back to --userDataDir (let MCP launch Chrome itself)

--- a/genuary-skills/genuary.yaml
+++ b/genuary-skills/genuary.yaml
@@ -152,8 +152,8 @@ extensions:
     args:
       - -y
       - chrome-devtools-mcp@latest
-      - --browserUrl
-      - http://127.0.0.1:9223
+      - --userDataDir
+      - /tmp/genuary-skills-chrome
     timeout: 300
 
 parameters:
